@@ -231,10 +231,10 @@ public class MutableInt extends Number implements Comparable<MutableInt>, Mutabl
     /**
      * Gets this mutable as an instance of Integer.
      *
-     * @return a Integer instance containing the value from this mutable
+     * @return a Integer instance containing the value from this mutable, never null
      */
     public Integer toInteger() {
-        return new Integer(intValue());
+        return Integer.valueOf(intValue());
     }
 
     //-----------------------------------------------------------------------
